--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@primeuix/themes": "^2.0.2",
     "@tailwindcss/vite": "^4.1.18",
+    "primeicons": "^7.0.0",
     "primevue": "^4.5.4",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.25"
